--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "redbean-node": "0.0.21",
         "socket.io": "^4.1.3",
         "socket.io-client": "^4.1.3",
-        "sqlite3": "^5.0.2",
+        "@louislam/sqlite3": "^5.0.3",
         "tcp-ping": "^0.1.1",
         "v-pagination-3": "^0.1.6",
         "vue": "^3.1.5",
